Spacing Issues fix

--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -117,3 +117,11 @@
     font-size: 14px;
     letter-spacing: 0.36px;
 }
+
+.cart-page-fixes {
+    bottom: -22px;
+    font-style: italic;
+    font-size: 10px !important;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
