--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -42,9 +42,9 @@
 }
 
 .old-price {
-    font-size: 10px;
+    font-size: 16px;
     text-decoration: line-through;
-    color: tint(#9f9f9f, 50%) !important;
+    color: #9f9f9f !important;
     font-family: $font-Montserrat;
 }
 
@@ -66,8 +66,8 @@
         line-height: 85px;
     }
     &.size {
-        line-height: 50px;
-        height: 50px;
+        line-height: 40px;
+        height: 40px;
     }
     &.quantity {
         line-height: 40px;
@@ -90,7 +90,7 @@
     font-style: normal;
     font-weight:normal;
     letter-spacing: 0.28px;
-    padding: 3px 0px 4px 0px;
+    // padding: 3px 0px 4px 0px;
 }
 
 .bridal-ring {
@@ -294,7 +294,7 @@
 
 
 .badge-img {
-    padding: 15px 0;
+    margin-top: 40px
 }
 .not-eligible {
     text-align: left;
